<resources>
    <string name="app_name">华商E家</string>
    <string name="app_dirsname">HSESchool</string>
    <string name="weixin_app_id">wxf3beacd0cfced80c</string>
    <string name="weixin_app_secret">9f869bf1266ddcbb85d824521a2ac436</string>
    <string name="confirm">确定</string>
    <string name="confirm_exit">退出</string>
    <string name="confirm_or_not">是否退出?</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="delete">删除</string>
    <string name="notify">提示</string>
    <string name="retry">重试</string>
    <string name="add">添加</string>
    <string name="more">更多</string>
    <string name="all">全部</string>
    <string name="search">搜索</string>
    <string name="next">下一步</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="publish">发表</string>
    <string name="commit">提交</string>
    <string name="manager">管理</string>
    <string name="retract">&#160;&#160;&#160;&#160;&#160;</string>
    <string name="load_fail">数据加载失败， 请重试！</string>
    <string name="login_fail">登录失败， 请重新登录</string>
    <string name="crash_file_path">"/crash"</string>
    <string name="crash_toast_message">程序出现异常,即将退出</string>
    <string name="crash_write_error">文件写入时出现错误</string>
    <string name="internet_avaiable_false">网络链接异常,请检查网络链接</string>
    <string name="connection_timeout">请求超时</string>
    <string name="connection_fail">连接失败！</string>
    <string name="pull_to_refresh_complete">最近更新: </string>
    <string name="pull_to_refresh_pull_labels">下拉刷新</string>
    <string name="pull_to_refresh_release_labels">松开刷新数据</string>
    <string name="pull_to_refresh_refreshing_labels">正在加载...</string>
    <string name="pull_to_refresh_footer_release_label">松开载入更多</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载...</string>
    <string name="version_update">立即更新</string>
    <string name="version_cancel">以后再说</string>
    <string name="version_exit">退出</string>
    <string name="version_title">版本提示</string>
    <string name="version_title_update">发现新版本，请更新</string>
    <string name="version_already_now">已是最新版本</string>
    <string name="version_please_update">当前版本低于最低版本, 请先更新</string>
    <string name="version_check_doing">检测版本\u2026</string>
    <string name="version_check_new">检测到新版本V%1$s</string>
    <string name="version_valid">链接无效</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">更多</string>
    <string name="time_now">刚刚</string>
    <string name="time_second">分钟前</string>
    <string name="time_hour">小时前</string>
    <string name="time_yestoday">昨天</string>
    <string name="time_beforeyestoday">前天</string>
    <string name="time_day">天前</string>
    <string name="publish_protocol_title">随便聊用户协议</string>
    <string name="publish_protocol_content">我已阅读并接受协议</string>
    <string name="publish_protocol_continue">继续</string>
    <string name="publish_content_low">内容字数最少5个</string>
    <string name="publish_content_up">内容字数最多300个</string>
    <string name="publish_content_large">内容字数最多1000个</string>
    <string name="publish_success">发表成功</string>
    <string name="publish_pic_fail">图片上传失败，请重试！</string>
    <string name="time_format1">yyyy-MM-dd HH:mm</string>
    <string name="time_format2">yyyy-MM-dd</string>
    <string name="time_format3">MM-dd</string>
    <string name="time_format4">MM-dd HH:mm</string>
    <string name="time_format5">MM月dd日 HH:mm</string>
    <string name="channel_myschoolyard">我的校园</string>
    <string name="channel_schoolyardservice">校园服务</string>
    <string name="channel_myclassmate">我的同学</string>
    <string name="channel_mycenter">个人中心</string>
    <string name="mycenter_cell1">我的消息</string>
    <string name="mycenter_cell2">我的好友</string>
    <string name="mycenter_cell3">我的帖子</string>
    <string name="mycenter_cell4">我的积分</string>
    <string name="mycenter_cell5">我的收藏</string>
    <string name="mycenter_cell6">设置</string>
    <string name="mycenter_cell7">关于我们</string>
    <string name="mycenter_cell8">意见反馈</string>
    <string name="mycenter_cell9">我的名片</string>
    <string name="mycenter_cell10">修改密码</string>
    <string name="mycenter_login">点击登录</string>
    <string name="mycenter_login_notify">登录后体验更多功能</string>
    <string name="mycenter_usermsg">%1$s&#160;&#160;&#160;|&#160;&#160;&#160;头衔&#160;:&#160;%2$s</string>
    <string name="mycenter_storeorder_hint">我的订单</string>
    <string name="mycenter_storeorder_checkall">查看全部订单</string>
    <string name="mycenter_storeorder_cell1">待付款</string>
    <string name="mycenter_storeorder_cell2">待收货</string>
    <string name="mycenter_storeorder_cell3">待评价</string>
    <string name="mycenter_storeorder_cell4">退货单</string>
    <string name="source_name0">系统消息</string>
    <string name="source_name3">活动</string>
    <string name="source_name4">资讯</string>
    <string name="source_name5">服务</string>
    <string name="login_notify">请先登录！</string>
    <string name="login_title">登录</string>
    <string name="login_forgetpass">忘记密码</string>
    <string name="login_register">立即注册</string>
    <string name="login_name">学号/手机号</string>
    <string name="login_password">密码</string>
    <string name="login_nickname">昵称</string>
    <string name="login_studentnumber">学号</string>
    <string name="login_phone">手机号</string>
    <string name="login_account_null">请输入学号或手机号</string>
    <string name="login_password_null">请输入密码</string>
    <string name="login_register_title">注册</string>
    <string name="login_register_nickname">昵称(必填,最多20个字)</string>
    <string name="login_register_nickname_null">请输入昵称</string>
    <string name="login_register_phone">手机号码(必填)</string>
    <string name="login_register_email">Email</string>
    <string name="login_register_password">密码(必填)</string>
    <string name="login_register_password_null">请输入密码</string>
    <string name="login_register_password_more">密码确认(必填)</string>
    <string name="login_register_password_more_null">请重复密码</string>
    <string name="login_register_phone_null">请输入手机号码</string>
    <string name="login_register_phone_valid">请输入合法的11位手机号码</string>
    <string name="login_register_password_more_same">重复密码不一致</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_welcome">欢迎使用</string>
    <string name="login_welcome_hint1">请输入姓名</string>
    <string name="login_welcome_hint2">身份证/学号</string>
    <string name="login_welcome_hint2_null">请输入身份证/学号</string>
    <string name="passwordreset_title">密码重置</string>
    <string name="passwordreset_hint1">请输入旧密码</string>
    <string name="passwordreset_hint2">新密码</string>
    <string name="passwordreset_hint3">新密码确认</string>
    <string name="passwordreset_hint4">请输入新密码</string>
    <string name="passwordreset_hint5">请重复密码</string>
    <string name="passwordreset_hint6">重复密码不一致</string>
    <string name="passwordreset_hint7">密码重置成功</string>
    <string name="passwordauthcode_hint1">获取验证码</string>
    <string name="passwordauthcode_hint2">请输入验证码</string>
    <string name="passwordauthcode_hint3">您的手机号:&#160;&#160;%1$s</string>
    <string name="passwordauthcode_hint4">请重新获取验证码</string>
    <string name="passwordauthcode_hint5">验证码错误</string>
    <string name="passwordauthcode_hint6">请获取验证码</string>
    <string name="passwordfind_title">密码找回</string>
    <string name="passwordfind_hint1">使用说明&#160;:</string>
    <string name="passwordfind_hint2">按照提示，填写您的用户名或注册邮箱以及验证码，然后点击“下一步”。</string>
    <string name="passwordfind_hint3">1、手机仅限用于免费接收系统发送的短信验证码。\n2、本应用承诺不会对外泄露您的手机号码及用于其他商业用途。</string>
    <string name="passwordfind_hint4">请输入姓名</string>
    <string name="passwordfind_hint5">请输入身份证或学号</string>
    <string name="qrscan_text">将二维码/条形码放入框内, 即可自动扫描</string>
    <string name="qrscan_title">二维码扫描</string>
    <string name="qrscan_result">扫描结果</string>
    <string name="qrscan_result_hint">如需浏览，请长按网址复制后使用浏览器访问</string>
    <string name="photoalbum_picture">从相册选择</string>
    <string name="photoalbum_camera">拍照</string>
    <string name="photoalbum_title">相册</string>
    <string name="photoalbum_phone_picture">从手机相册选择</string>
    <string name="photoalbum_most_pic">最多选择%1$s张图片</string>
    <string name="photoalbum_done">完成</string>
    <string name="postdetails_title">详情</string>
    <string name="postdetails_owner">楼主</string>
    <string name="postdetails_commenttitle">评论</string>
    <string name="customcomment_hint">说两句吧~</string>
    <string name="comment_reply">%1$s:&#160;&#160;%2$s</string>
    <string name="comment_reply_more">%1$s回复%2$s:&#160;&#160;%3$s</string>
    <string name="custom_reply_user">回复 %1$s:</string>
    <string name="comment_detele">是否删除该评论?</string>
    <string name="activitydetails_addresstime">地点:&#160;&#160;%1$s\n时间:&#160;&#160;%2$s</string>
    <string name="activitydetails_addresstimeend">地点:&#160;&#160;%1$s\n开始时间:&#160;&#160;%2$s\n结束时间:&#160;&#160;%3$s</string>
    <string name="activitydetails_joincount">已有%1$s人参加</string>
    <string name="activitydetails_joincount_max">最多允许%1$s人报名</string>
    <string name="activitydetails_hint">活动介绍:</string>
    <string name="activitydetails_join">我要参加</string>
    <string name="activitydetails_unjoin">取消参加</string>
    <string name="activitydetails_join_already">已报名</string>
    <string name="activitydetails_join_partin">已参加</string>
    <string name="activitydetails_refuse">已拒绝</string>
    <string name="activitydetails_auditing">审核中/取消</string>
    <string name="activitydetails_title">活动详情</string>
    <string name="activitylist_title">活动列表</string>
    <string name="activitylist_personcount">参加人数&#160;&#160;:&#160;&#160;%1$s/%2$s</string>
    <string name="activitylist_finish">已结束</string>
    <string name="activitylist_going">进行中</string>
    <string name="activitylist_aborted">已中止</string>
    <string name="activitylist_unstart">未开始</string>
    <string name="mypost_title">我的帖子</string>
    <string name="mypost_imagecount">%1$s图</string>
    <string name="mypost_date">时间:&#160;&#160;%1$s</string>
    <string name="hobbygroup_publish">发表话题</string>
    <string name="hobbygroup_count">关注%1$s</string>
    <string name="hobbygroup_attention">关注</string>
    <string name="hobbygroup_attention_cancle">取消关注</string>
    <string name="publish_title">标题</string>
    <string name="publish_content">内容</string>
    <string name="publish_title_null">请输入标题</string>
    <string name="publish_content_null">请输入内容</string>
    <string name="publish_title_max">标题字数最多50个</string>
    <string name="publish_content_max">内容字数最多2500个</string>
    <string name="mycard_identity">身份证:</string>
    <string name="mycard_xh">学号:</string>
    <string name="mycard_zkzh">准考证号:</string>
    <string name="service_more">更多服务</string>
    <string name="service_add">服务添加</string>
    <string name="hobbygroup_group">%1$s&#160;&#160;(%2$s)</string>
    <string name="search_hint">请输入搜索关键字</string>
    <string name="search_more">查看更多</string>
    <string name="announcement_title">新闻公告</string>
    <string name="announcement_detils_title">通知详情</string>
    <string name="text_comment">条评论</string>
    <string name="activitydetails_dialog_title">活动报名</string>
    <string name="activitydetails_dialog_confirm">确认参加</string>
    <string name="search_bottom_button_text">查询</string>
    <string name="store_home_back">返回首页</string>
    <string name="store_check_order">查看订单</string>
    <string name="et_text_xm">姓名：</string>
    <string name="et_text_zkzh">准考证号：</string>
    <string name="tv_text_xm">姓名</string>
    <string name="tv_text_xx">学校</string>
    <string name="tv_text_kslb">考试类别</string>
    <string name="tv_text_zkzh">准考证号</string>
    <string name="tv_text_zf">总分</string>
    <string name="tv_text_tl">听力</string>
    <string name="tv_text_yd">阅读</string>
    <string name="tv_text_xzyfy">写作与翻译</string>
    <string name="text_pay_success">购买成功</string>
</resources>