<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_succeed"
        android:drawablePadding="10dp"
        android:text="@string/text_pay_success"
        android:textColor="#555555"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/pay_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#555555"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/pay_btn_back"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_orange_button_selector"
            android:text="@string/store_home_back"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/pay_btn_look"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red_button_selector"
            android:text="@string/store_check_order"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>