<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <LinearLayout
	        android:id="@+id/group_identity"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    android:layout_marginTop="60dp"
		    android:orientation="vertical">
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="30dp"
		        android:layout_marginBottom="5dp"
		        android:gravity="center"
		        android:textSize="15dp"
		        android:text="@string/mycard_identity"
		        android:textColor="#888888"/>
		    <ImageView
			    android:id="@+id/imageview_identity"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/app_name"
				android:onClick="onQrCodeClick"
				android:scaleType="centerCrop"/>
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/group_xh"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    android:layout_marginTop="70dp"
		    android:orientation="vertical">
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="30dp"
		        android:layout_marginBottom="5dp"
		        android:gravity="center"
		        android:textSize="15dp"
		        android:text="@string/mycard_xh"
		        android:textColor="#888888"/>
		    <ImageView
			    android:id="@+id/imageview_xh"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/app_name"
				android:onClick="onQrCodeClick"
				android:scaleType="centerCrop"/>
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/group_zkzh"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    android:layout_marginTop="70dp"
		    android:layout_marginBottom="30dp"
		    android:orientation="vertical">
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="30dp"
		        android:layout_marginBottom="5dp"
		        android:gravity="center"
		        android:textSize="15dp"
		        android:text="@string/mycard_zkzh"
		        android:textColor="#888888"/>
		    <ImageView
			    android:id="@+id/imageview_zkzh"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/app_name"
				android:onClick="onQrCodeClick"
				android:scaleType="centerCrop"/>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>
