<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_activity_goods_release_title"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/et_text_xm" />

        <EditText
            android:id="@+id/english_query_stuname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_activity_goods_release_title"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/et_text_zkzh" />

        <EditText
            android:id="@+id/english_query_stunumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_red_button_selector"
        android:onClick="onQueryClick"
        android:text="@string/search_bottom_button_text"
        android:textColor="#FFF" />

</LinearLayout>