<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#e7e7e7">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="15dp"
	    android:layout_marginRight="15dp"
	    android:orientation="vertical" 
	    android:background="@drawable/bg_loginlayout">
	    
        <LinearLayout
		    android:layout_width="0dp"
		    android:layout_height="0dp"
		    android:focusable="true"
		    android:focusableInTouchMode="true"/>
        
	    <RelativeLayout
		    android:layout_width="match_parent"
	   		android:layout_height="match_parent"
	   		android:layout_weight="1">
	        <View
		        android:id="@+id/ico_people"
		        android:layout_width="17dp" 
		        android:layout_height="18dp" 
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="15dp"
		        android:background="@drawable/login_people"/>
	        <EditText
		        android:id="@+id/editview_people"
		        android:layout_width="match_parent"
		    	android:layout_height="match_parent"
		    	android:background="#00000000"
		    	android:layout_marginLeft="45dp"
		    	android:layout_marginRight="5dp"
		    	android:singleLine="true"
		    	android:textSize="15dp"
		    	android:textColor="#282828"
		    	android:textColorHint="#c0c0c0"
		    	android:hint="@string/login_name"/>
	    </RelativeLayout>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="0.5dp"
	        android:background="#e7e7e7"/>
	    
	    <RelativeLayout
		    android:layout_width="match_parent"
	   		android:layout_height="match_parent"
	   		android:layout_weight="1">
	        <View
		        android:id="@+id/ico_key"
		        android:layout_width="11dp" 
		        android:layout_height="18dp" 
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="15dp"
		        android:background="@drawable/login_key"/>
	        <EditText
		        android:id="@+id/editview_password"
		        android:layout_width="match_parent"
		    	android:layout_height="match_parent"
		    	android:background="#00000000"
		    	android:layout_marginLeft="45dp"
		    	android:layout_marginRight="5dp"
		    	android:singleLine="true"
		    	android:textSize="15dp"
		    	android:textColor="#282828"
		    	android:textColorHint="#c0c0c0"
		    	android:hint="@string/login_password"/>
	    </RelativeLayout>
	</LinearLayout>
	
    <include
        layout="@layout/custom_loginsign" 
		android:id="@+id/custom_loginsign" 
		android:layout_width="match_parent"
   		android:layout_height="45dp"
   		android:layout_marginLeft="5dp"/>
	
    <TextView 
   	    android:id="@+id/textview_login"
   	    android:layout_width="match_parent"
   		android:layout_height="40dp" 
   		android:layout_marginLeft="15dp"
   		android:layout_marginRight="15dp"
   		android:layout_marginBottom="15dp"
   		android:layout_marginTop="5dp"
   		android:textSize="17dp"
   		android:textColor="#ffffff"
   		android:text="@string/login_title"
   		android:background="@drawable/btn_red_button_selector"
   		android:clickable="true"
   		android:onClick="onTipBtnClick"
   		android:gravity="center"/>
    
    <TextView 
   	    android:id="@+id/textview_register"
   	    android:layout_width="wrap_content"
   		android:layout_height="30dp" 
   		android:layout_gravity="center_horizontal"
   		android:textSize="15dp"
   		android:textColor="#de504f"
   		android:text="@string/login_register"
   		android:clickable="true"
   		android:onClick="onTipBtnClick"
   		android:gravity="center"/>

</LinearLayout>
