<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ffffff" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/photoalbum_title"
            android:textColor="#555555"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/pic_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#555555"
            android:textSize="18dp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_alignParentBottom="true"
            android:background="#cacaca"/>
    </RelativeLayout>

    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginBottom="50dp"
	        android:layout_gravity="top"
            android:orientation="vertical" >
            <GridView
	            android:id="@+id/gridview"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="8dp"
	            android:layout_marginRight="8dp"
	            android:horizontalSpacing="8dp"
	            android:numColumns="3"
	            android:scrollbars="none"
	            android:listSelector="#00000000"
	            android:verticalSpacing="8dp" >
        </GridView>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp" 
                android:background="#cacaca"/>

            <Button
                android:id="@+id/bt" 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:textColor="#555555"
                android:textSize="16dp"
                android:text="@string/photoalbum_done" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>